Fixed modal close button alignmend and padding issue

--- a/packages/terra-consumer-nav/src/components/modal/Modal.scss
+++ b/packages/terra-consumer-nav/src/components/modal/Modal.scss
@@ -43,6 +43,7 @@
     padding: 0;
     position: absolute;
     right: 20px;
+    top: 0;
 
     @media screen and (max-width: $terra-tiny-breakpoint) {
       right: 15px;
@@ -52,6 +53,9 @@
   .close-button {
     color: var(--terra-consumer--modal-close-button-color, #fff) !important;
     font-size: 16px !important;
+    margin: 0;
+    padding: 0;
+
 
     &:hover {
       color: var(--terra-consumer--modal-close-button-hover-color, #777) !important;
