--- a/packages/terra-consumer-nav/src/components/nav-help/NavHelp.scss
+++ b/packages/terra-consumer-nav/src/components/nav-help/NavHelp.scss
@@ -62,8 +62,8 @@
     text-decoration: none;
   }
 
-  .item-text-padding {
-    padding-left: 10px;
+  .icon-text-padding {
+    padding-right: 10px;
   }
 
   .toggler-padding {
