--- a/packages/terra-consumer-nav/src/components/nav-help/NavHelpPopup.scss
+++ b/packages/terra-consumer-nav/src/components/nav-help/NavHelpPopup.scss
@@ -4,7 +4,7 @@
     color: var(--terra-consumer--popup-title-color, #fff);
     font-size: 20px;
     line-height: 30px;
-    padding: 5px 10px;
+    padding: 5px 15px;
     width: 100%;
   }
 
